fix: overflow hidden on number float

--- a/Calculadora/css/style.css
+++ b/Calculadora/css/style.css
@@ -1,3 +1,7 @@
+* {
+    user-select: none;
+}
+
 .botao {
     width: 50px;
     height: 50px;
@@ -55,6 +59,8 @@ body {
 div#calculadora>div#visor>p#resultado {
     padding: 10px;
     color: #000000;
+    overflow: hidden;
+    user-select: text;
 }
 
 #botaoIgual {
